| Summary: | ASTERISK-28853: Missing include on FreeBSD | ||
| Reporter: | Guido Falsi (madpilot) | Labels: | |
| Date Opened: | 2020-04-26 06:08:14 | Date Closed: | 2020-04-28 13:01:55 |
| Priority: | Major | Regression? | Yes |
| Status: | Closed/Complete | Components: | Core/DNS |
| Versions: | 16.10.0 17.4.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | FReeBSD ports system | Attachments: | |
| Description: | The recently added main/dns_txt.c file fails to build on FreeBSD due to a missing include.
It should include netinet/in.h I'm going to post a patch on gerrit to this effect. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2020-04-26 06:08:15.612-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. By: Friendly Automation (friendly-automation) 2020-04-28 13:01:56.402-0500 Change 14352 merged by Friendly Automation: core/dns: Add system include required on FreeBSD [https://gerrit.asterisk.org/c/asterisk/+/14352|https://gerrit.asterisk.org/c/asterisk/+/14352] By: Friendly Automation (friendly-automation) 2020-04-28 13:06:08.456-0500 Change 14353 merged by Joshua Colp: core/dns: Add system include required on FreeBSD [https://gerrit.asterisk.org/c/asterisk/+/14353|https://gerrit.asterisk.org/c/asterisk/+/14353] By: Friendly Automation (friendly-automation) 2020-04-28 13:07:24.603-0500 Change 14316 merged by Joshua Colp: core/dns: Add system include required on FreeBSD [https://gerrit.asterisk.org/c/asterisk/+/14316|https://gerrit.asterisk.org/c/asterisk/+/14316] By: Friendly Automation (friendly-automation) 2020-04-28 13:07:50.700-0500 Change 14315 merged by Joshua Colp: core/dns: Add system include required on FreeBSD [https://gerrit.asterisk.org/c/asterisk/+/14315|https://gerrit.asterisk.org/c/asterisk/+/14315] By: Friendly Automation (friendly-automation) 2020-04-28 13:08:22.459-0500 Change 14326 merged by Joshua Colp: core/dns: Add system include required on FreeBSD [https://gerrit.asterisk.org/c/asterisk/+/14326|https://gerrit.asterisk.org/c/asterisk/+/14326] | ||